<resources>
    <string name="app_name">Autoboon</string>
    <string name="room_db">autoboon</string>
    <string name="title_activity_main">AUTOBOON</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">user name</string>
    <string name="nav_header_subtitle">autoboon.in</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="my_profile">My Profile</string>
    <string name="vehicle_listing">Vehicle Listing</string>
    <string name="add_new_vehicle">Add New Vehicle</string>
    <string name="theft_report">Theft Report</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="exit_msg">Press again to close App</string>
    <string name="content_1_heading">Reporting the theft of a vehicle</string>
    <string name="content_2_heading">Contacting your insurer</string>
    <string name="content_text">ut perspiciatis unde omnis iste natus error sit voluptatem accusant doloremque laudantium, totam rem aperiam eaque ipsa quae.</string>
    <string name="account_registration">Account Registration</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="by_signing_up_you_are_term">By signing up, you are agreed to our </string>
    <string name="terms_condition">Terms &amp; Conditions</string>
    <string name="signup">SIGN UP</string>
    <string name="alerady_member">Already a Member? </string>
    <string name="login_now">LOG IN NOW</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="signin">SIGN IN</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">FORGOT YOUR PASSWORD?</string>
    <string name="you_dont_have_an_account">You Don’t have an Account? </string>
    <string name="signup_now">SIGN UP NOW</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="email">EMAIL</string>
    <string name="mobile_number">MOBILE NUMBER</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="address">ADDRESS</string>
    <string name="city">CITY</string>
    <string name="state_province_region">STATE/PROVINCE/REGION</string>
    <string name="zip_postal_code">ZIP CODE/POSTAL CODE</string>
    <string name="search">Search</string>
    <string name="search_query">Enter Vehicle Number Or Chassis Number</string>
</resources>
