<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/man_user"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/searcher"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_vehicle_listing"
            android:icon="@drawable/listing"
            android:title="@string/vehicle_listing" />
        <item
            android:id="@+id/nav_add_new_vehicle"
            android:icon="@drawable/sports_car"
            android:title="@string/add_new_vehicle" />
        <item
            android:id="@+id/nav_theft_report"
            android:icon="@drawable/robber"
            android:title="@string/theft_report" />
    </group>

    <item android:title="Extra">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/login"
                android:title="@string/login" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
