<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/app_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@drawable/ss_image"/>

        <TextView
            android:id="@+id/tv_title_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/account_registration"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorText"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/cv_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <android.support.v7.widget.CardView
            android:id="@+id/cv_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginBottom="16dp"
            android:paddingBottom="0dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="24dp"
            app:cardBackgroundColor="@color/colorText"
            app:cardCornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_register">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:paddingBottom="0dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp">

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/cl_name_register"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/border_cornor_round"
                    android:padding="8dp"
                    app:layout_constraintBottom_toTopOf="@id/cl_mobile_register"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed">

                    <ImageView
                        android:id="@+id/iv_name_register"
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_margin="8dp"
                        android:contentDescription="@string/enter_full_name"
                        android:scaleType="fitXY"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/et_name_register"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/pencil" />

                    <EditText
                        android:id="@+id/et_name_register"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:hint="@string/enter_full_name"
                        android:inputType="textPersonName"
                        android:maxLength="50"
                        android:singleLine="true"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/iv_name_register"
                        app:layout_constraintTop_toTopOf="parent" />
                </android.support.constraint.ConstraintLayout>

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/cl_mobile_register"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/border_cornor_round"
                    android:padding="8dp"
                    app:layout_constraintBottom_toTopOf="@id/cl_email_register"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cl_name_register">

                    <ImageView
                        android:id="@+id/iv_mobile_register"
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_margin="8dp"
                        android:contentDescription="@string/enter_mobile_number"
                        android:scaleType="fitXY"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/et_mobile_register"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/phone" />

                    <EditText
                        android:id="@+id/et_mobile_register"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:hint="@string/enter_mobile_number"
                        android:inputType="phone"
                        android:maxLength="50"
                        android:singleLine="true"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/iv_mobile_register"
                        app:layout_constraintTop_toTopOf="parent" />
                </android.support.constraint.ConstraintLayout>

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/cl_email_register"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/border_cornor_round"
                    android:padding="8dp"
                    app:layout_constraintBottom_toTopOf="@id/cl_password_register"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cl_mobile_register">

                    <ImageView
                        android:id="@+id/iv_email_register"
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_margin="8dp"
                        android:contentDescription="@string/enter_email"
                        android:scaleType="fitXY"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/et_email_register"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/mail" />

                    <EditText
                        android:id="@+id/et_email_register"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:hint="@string/enter_email"
                        android:inputType="textEmailAddress"
                        android:maxLength="60"
                        android:singleLine="true"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/iv_email_register"
                        app:layout_constraintTop_toTopOf="parent" />
                </android.support.constraint.ConstraintLayout>

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/cl_password_register"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/border_cornor_round"
                    android:padding="8dp"
                    app:layout_constraintBottom_toTopOf="@id/cl_terms_register"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cl_email_register">

                    <ImageView
                        android:id="@+id/iv_password_register"
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_margin="8dp"
                        android:contentDescription="@string/enter_password"
                        android:scaleType="fitXY"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/et_password_register"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/password" />

                    <EditText
                        android:id="@+id/et_password_register"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:hint="@string/enter_password"
                        android:inputType="textPassword"
                        android:maxLength="18"
                        android:singleLine="true"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/iv_password_register"
                        app:layout_constraintTop_toTopOf="parent" />
                </android.support.constraint.ConstraintLayout>

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/cl_terms_register"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/border_cornor_round_filled"
                    android:padding="8dp"
                    app:layout_constraintBottom_toTopOf="@id/b_signup_register"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cl_password_register">

                    <TextView
                        android:id="@+id/tv_terms_text_1_register"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/by_signing_up_you_are_term"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toTopOf="@id/tv_terms_text_2_register"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_terms_text_2_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/terms_condition"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_terms_text_1_register" />
                </android.support.constraint.ConstraintLayout>

                <Button
                    android:id="@+id/b_signup_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/change_color_primary"
                    android:padding="4dp"
                    android:text="@string/signup"
                    android:textColor="@color/colorText"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/cl_login_register"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cl_terms_register" />

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/cl_login_register"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/b_signup_register">

                    <TextView
                        android:id="@+id/tv_login_text_1_register"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:text="@string/alerady_member"
                        android:textAlignment="center"
                        android:textColor="@color/colorRed"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/tv_login_text_2_register"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_login_text_2_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_now"
                        android:textColor="@color/colorRed"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tv_login_text_1_register"
                        app:layout_constraintTop_toTopOf="parent" />
                </android.support.constraint.ConstraintLayout>
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>
    </android.support.constraint.ConstraintLayout>
</ScrollView>